--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.22.0",
+    "eslint": "^7.25.0",
     "eslint-config-firstandthird": "^6.0.3",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-mocha": "^8.1.0",
@@ -64,5 +64,8 @@
     "markdown-it-attrs": "*",
     "microbundle": "^0.13.0",
     "mocha": "^8.3.2"
+  },
+  "dependencies": {
+    "is-svg": "^3.0.0"
   }
 }
