--- a/package.json
+++ b/package.json
@@ -56,15 +56,15 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.29.0",
+    "eslint": "^7.32.0",
     "eslint-config-firstandthird": "^6.0.3",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-mocha": "^9.0.0",
     "markdown-it": "*",
     "markdown-it-attrs": "*",
     "microbundle": "^0.13.3",
-    "mocha": "^9.0.1",
-    "normalize-url": ">=4.5.1"
+    "mocha": "^9.1.1",
+    "normalize-url": "^6.1.0"
   },
   "dependencies": {
     "is-svg": "^4.3.1"
