--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clean": "node -e \"fs.rmSync('./dist', { recursive: true, force: true });\"",
     "prebuild": "npm run clean",
     "dev": "microbundle watch",
-    "test": "mocha ./src/index.test.js",
+    "test": "mocha ./test/index.test.js && npm run test:exports",
     "test:exports": "node ./test/_import.mjs && node ./test/_require.cjs",
     "lint": "eslint src/*.js lazy-example.js",
     "prepublishOnly": "npm run lint && npm run test && npm run build"
