--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build": "microbundle --target node --compress --sourcemap false",
     "clean": "node -e \"fs.rmSync('./dist', { recursive: true, force: true });\"",
     "dev": "microbundle watch",
+    "pretest": "npm run build",
     "test": "mocha ./test/index.test.js && npm run test:exports",
     "test:exports": "node ./test/_import.mjs && node ./test/_require.cjs",
     "lint": "eslint src/*.js lazy-example.js",
